Bug 167194 - Do not allow "Reinstate"/"Reject but track" action on user's own changes
Summary: Do not allow "Reinstate"/"Reject but track" action on user's own changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords:
: 166790 (view as bug list)
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2025-06-25 07:45 UTC by Eyal Rozenberg
Modified: 2025-08-07 13:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2025-06-25 07:45:34 UTC
With a recent 26.2 nightly, do the following:

1. Create a new Writer document
2. Enable 'Track Changes'
3. Type "hello"
4. Right-click the word you typed
5. Choose "Reinstate" / "Reject but track"

Expected results: ???

Actual results: The change is rejected, the word is deleted, and the document is empty.


I don't think that makes sense. Rather, this action should probably be _disabled_ for a user's own changes. They can reject them, they can accept them, but it's senseless for the same user to both propose a change and propose to revert it.
Comment 1 Miklos Vajna 2025-06-25 11:13:05 UTC
This is probably not intentional. By default Writer tries to combine your changes, so e.g. not every typed character is a new redline. This goes too far here and your own insert + delete on top of it is combined, and probably should not. This may be the the same as bug 166790
Comment 2 Eyal Rozenberg 2025-06-25 21:11:24 UTC
*** Bug 166790 has been marked as a duplicate of this bug. ***
Comment 3 Lars Jødal 2025-06-26 03:33:44 UTC
The described behaviour is confirmed, and is present already at the feature's introduction in 25.8.

I have not seen the code for implementation of "Reinstate" / "Reject but track", but the effect may be described as writing deletion (of inserted text) or insertion (of deleted text) on top of the change. This works very well when the original change is made by one user and "Reinstate" / "Reject but track" is made by another user. However, when it is the same user, writing a delete on top of an insertion, the result will be that the text is gone - which fits the observed behaviour.

As suggested in the original report, a solution could be to disable the feature for a user's own change, as the feature was never intended for handling your own changes.

A side effect of that solution will be that the "Reinstate" / "Reject but track" will be that if a user does not write user name in LO, and the text is handled by another user not writing user name, it will appear like the same user, and the feature cannot be used. This may be acceptable - track changes in any case works best, if user data (name) are available.
Comment 4 Telesto 2025-06-26 10:40:17 UTC
(In reply to Lars Jødal from comment #3)
> As suggested in the original report, a solution could be to disable the
> feature for a user's own change, as the feature was never intended for
> handling your own changes.

True. However it's makes life rather inconvenient for QA/testing purposes. If you have to switch user to test.

I ask myself: is there a downside by allowing to reject but track for your own change?
Comment 5 Lars Jødal 2025-06-26 11:18:28 UTC
(In reply to Telesto from comment #4)
> (In reply to Lars Jødal from comment #3)
> > As suggested in the original report, a solution could be to disable the
> > feature for a user's own change, as the feature was never intended for
> > handling your own changes.
> 
> True. However it's makes life rather inconvenient for QA/testing purposes.
> If you have to switch user to test.

Agreed. The problem is that the behaviour differs between the two situations: 
a) One user makes the change, another user uses "Reject but Track".
b) The same user (user name) makes the change and uses "Reject but Track".

The feature is intended for situation a). If it is tested in situation b), test results can be confusing. So _not_ disabling the feature in situation b) can also make life inconvenient for testing.

> I ask myself: is there a downside by allowing to reject but track for your
> own change?

For normal users, the downside is the risk of confusion when "Reject but Track" is used upon your own insertion: The change simply disappears, so "Reject but Track" in this special case produces the same result as normal "Reject".

For testers, the downside is the risk that the test results will be confusing if the tester overlooks the difference in behaviour.

Whether these downsides are serious enough to warrant disabling the feature is a different question. At least at present, I have no strong opinion on that.
Comment 6 Lars Jødal 2025-06-26 11:35:36 UTC
... I meant "disabling the feature IN SITUATION B)". I surely do not think the feature should altogether disatabled.
Comment 7 Eyal Rozenberg 2025-06-26 11:43:34 UTC
(In reply to Miklos Vajna from comment #1)
> This is probably not intentional. By default Writer tries to combine your
> changes, so e.g. not every typed character is a new redline. This goes too
> far here and your own insert + delete on top of it is combined, and probably
> should not. This may be the the same as bug 166790

I don't think it is too far, I think it's just right.

(In reply to Telesto from comment #4)
> True. However it's makes life rather inconvenient for QA/testing purposes.
> If you have to switch user to test.

The QA considerations are of course secondary to actual use of the feature. With that said - it is indeed cumbersome to work with different/multiple author identities, not just for QA. See for example my bug 162423 (and you are encouraged to reopen it); I also just filed bug 167240, although I have a feeling it's a dupe.

> I ask myself: is there a downside by allowing to reject but track for your
> own change?

IMNSHO, the answer is no. Given that there is no real "reject", just propositions of deletions/insertions - I don't believe this makes sense. But - I am open to be convinced otherwise.
Comment 8 Commit Notification 2025-08-01 17:59:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e545ada3501780ee6552bbfa19954794e0440d46

tdf#167194 sw redline reinstate: fix handling of self-inserts

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-07 13:54:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b00d8e4cf6e903a3dcd29133e79a3091dfaead29

tdf#167194 sw redline reinstate: fix handling of self-inserts

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.